--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+.formularioRegistro {
+  padding-left: 30%;
+  padding-right: 30%;
+  margin-top: 10%;
+}
