--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,25 @@
+<h1 class="titulo1">PEDIDOS</h1>
+
 <div class="formularioRegistro">
   <h2>Crear pedido</h2>
   <form [formGroup]="pedidoForm" (ngSubmit)="guardar()">
     <div class="form-group">
       <label>Area</label>
-      <input type="text" formControlName="areaId" class="form-control">
+      <select id="area" formControlName="areaId" class="form-control">
+        <option *ngFor="let item of areas" [value]="item.id">{{ item.areaNombre }}</option>
+      </select>
     </div>
     <div class="form-group">
       <label>Prioridad</label>
-      <input type="text" formControlName="prioridadId" class="form-control">
+      <select id="prioridad" formControlName="prioridadId" class="form-control">
+        <option *ngFor="let item of prioridades" [value]="item.id">{{ item.prioridadTipo }}</option>
+      </select>
     </div>
     <div class="form-group">
       <label>Estado</label>
-      <input type="text" formControlName="estadoId" class="form-control">
+      <select id="estado" formControlName="estadoId" class="form-control">
+        <option *ngFor="let item of estados" [value]="item.id">{{ item.estadoTipo }}</option>
+      </select>
     </div>
     <div class="form-group">
       <label>Fecha del Pedido</label>
