--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,43 @@
 <h1 class="titulo1">PEDIDOS</h1>
 
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>Top 3 Pedidos</h2>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+          <tr>
+            <th scope="col">Pedido</th>
+            <th scope="col">Área Solicitante</th>
+            <th scope="col">Estado</th>
+            <th scope="col">Prioridad</th>
+            <th scope="col">Fecha del Pedido</th>
+            <th scope="col">Fecha Límite</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let pedido of pedidos">
+            <td>{{ pedido[0] }}</td>
+            <td>{{ pedido[1] }}</td>
+            <td>{{ pedido[2] }}</td>
+            <td>{{ pedido[3] }}</td>
+            <td>{{ pedido[4] }}</td>
+            <td>{{ pedido[5] }}</td>
+          </tr>
+          </tbody>
+        </table>
+        <div *ngIf="pedidos.length === 0" class="alert alert-warning" role="alert">
+          No hay pedidos disponibles.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 <div class="formularioRegistro">
   <h2>Crear pedido</h2>
   <form [formGroup]="pedidoForm" (ngSubmit)="guardar()">
